--- a/Sources/DataPloter/DataPloter.csproj
+++ b/Sources/DataPloter/DataPloter.csproj
@@ -6,6 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Authors>Ibram Reda</Authors>
+    <Version>0.0.1</Version>
+    <Description>Plot Data using SkiaSharp</Description>
+    <PackageProjectUrl>https://github.com/abramReda/DataPloter</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/abramReda/DataPloter</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
